2003-08-27  mput <root@mput.dip.jp>

	* configure: autoreconfed

2003-08-27  Takashi Iwai <tiwai@suse.de>

	* interface/alsaseq_c.c, configure.in:
	  higher resolution of rendering in ALSA sequencer mode
	  with the event timestamps.  works only on the latest
	  ALSA 0.9.
	  works now also with the non-audio-device (e.g. wav).

2003-08-26  Takashi Iwai <tiwai@suse.de>

	* timidity/timidity.c: clean up set_value().
	* interface/alsaseq_c.c: set the client name.

2003-08-25  mput <root@mput.dip.jp>

	* configure,timidity/Makefile.in: To fit with Iwai's changes

2003-08-25  Takashi Iwai <tiwai@suse.de>

	* configure.in, timidity/Makefile.am, timidity/output.c,
	  timidity/jack_a.c:
	  JACK output support (jackit.sf.net)
	  To enable JACK, you'll need pkgconfig installed.
	* timidity/timidity.c:
	  Fixed the path of libesd for AMD64 and PPC64 (/usr/lib64)
	* timidity/playmidi.c:
	  Added parentheses around the ambiguous conditions.

2003-08-21  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c (parse_opt_s): -s option works correctly again

2003-08-19  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.c, timidity/tables.c:
	  Adjust minor of Pythagoras tuning by syntonic comma

2003-08-18  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c:
	  Bug fix --{default,force}-{bank,program}

2003-08-17  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.c, timidity/timidity.c:
	  Bug fix --force-program

2003-08-17  mput <root@mput.dip.jp>

	* timidity/timidity.c (parse_opt_h): Bug Fix

2003-08-17 Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/timidity.c (parse_opt_s): -s option works correctly again
	* timidity/reverb.c (init_reverb):
	  -EFchorus=3 was cousing mono output to crash.

2003-08-15  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.[ch], timidity/timidity.[ch]:
	  Support for "Always use program n on channel m" option
	  Support for multi-argument of -Q option
	  Support for "Enable/Disable Temperament control" option