@@ -1,3 +1,8 @@
+2003-08-28  TAMUKI Shoichi <tamuki@linet.gr.jp>
+
+	* timidity/timidity.c:
+	  Little patch to avoid prototype mismatch
+
 2003-08-27  mput <root@mput.dip.jp>
 
 	* configure: autoreconfed
